--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/3. 插件中心/插件中心.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/3. 插件中心/插件中心.md
@@ -1,1 +1,65 @@
-test123
+### 1. 插件中心
+
+#### 1.1 导入插件
+
+系统提供该功能，您可以在该系统中导入插件数据。
+
+##### 背景说明：
+
+必须按照平台提供的Demo工程包进行自定义插件。Demo工程包获取请访问飞算云智官网（ https://www.feisuanyz.com ）中的“支持与服务 > 文档中心 > 高阶专题 > 自定义插件”路径下获取。
+
+##### 前提条件：
+
+a）您需要拥有“插件中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.1.1 操作步骤
+
+a）选择“插件中心”，系统显示“插件中心”页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/5-1_img.png)
+
+##### 图1-1 插件中心页面
+
+b）在“插入中心”页面，单击“导入”，系统显示“导入插件”页面，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/4chajian/1.png)
+
+##### 图1-2 导入插件
+
+c）选择需要导入的zip文件。
+
+##### 说明：
+
+a）导入的文件必须是.zip文件包，且文件名中的版本号格式必须为纯数字x.x.x，否则系统将会提示错误无法导入。
+
+b）导入时，系统会判断zip文件包中的Jar包或者需导入的插件名称是否在当前环境中已存在，若已存在则无法导入，以保证每套环境中每个插件的唯一性。
+
+d）单击“确定”，若导入文件无误则系统提示“操作成功”。
+
+#### 1.2 查看插件
+
+系统提供查询功能，您可以在系统中查看插件的详细信息。
+
+##### 前提条件：
+
+a）您需要拥有“插件中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.2.1 操作步骤
+
+a）选择“插件中心”，系统显示“插件中心”页面，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/zc-image/5-3_img.png)
+
+##### 图1-3 插件中心页面
+
+b） 在查询条件区域，输入相应的查询条件，单击“Enter”键，如图1-4所示：
+
+系统显示符合查询的信息。
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/5-3_img.png)
+
+##### 图1-4 查看插件页面
