--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/7. 系统配置/系统配置.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/7. 系统配置/系统配置.md
@@ -1,1 +1,30 @@
-test213
+### 1. 系统配置
+
+#### 1.1 新增系统配置
+
+系统提供该功能，您可以在该系统中新增平台系统全局配置项，用来规范具体的项目开发。例如：SQL组超时时间、接口用例分页数等。
+
+##### 前提条件：
+
+a）您需要拥有“系统配置”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.1.1 操作步骤
+
+a）选择“系统配置”，系统显示“系统配置”页面，如图1-1所示。
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/8-1_img.png)
+
+##### 图1-1 系统配置页面
+
+b）单击“新增”，系统显示“新增全局配置”页面，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/8-2_img.png)
+
+##### 图1-2 新增全局配置页面
+
+c）输入全局配置的相关信息。
+
+d）单击“确定” --> 系统提示“新增成功”。
+
