--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -164,4 +164,30 @@ a）您需要拥有“运维管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
+##### 1.5.1 操作步骤
 
+a）选择“项目管理”，系统显示“项目管理”页面，如图1-15所示：
+
+![1-15](https://www.feisuanyz.com/fsimage/zc-image/cz_9.6_01_img.png)
+
+##### 图1-15 项目管理页面
+
+b）选择需要转移的项目，单击右上角的“设置”选项，选择“创建人转移”，如图1-16所示：
+
+![1-16](https://www.feisuanyz.com/fsimage/zc-image/cz_9.6_02_img.png)
+
+##### 图1-16 创建人转移
+
+c）在系统显示“人员名单列表”页面，选择转移的用户，如图1-17所示：
+
+![1-17](https://www.feisuanyz.com/fsimage/zc-image/cz_9.6_03_img.png)
+
+##### 图1-17 选择转移用户
+
+d）单击“确定”，完成转移后的项目如图1-18所示：
+
+![1-18](https://www.feisuanyz.com/fsimage/zc-image/cz_9.6_04_img.png)
+
+##### 图1-18 完成创建人转移
+
+e）系统提示“操作成功”。
