--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -164,13 +164,56 @@ a）您需要拥有“运维管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
-##### 1.5.1 操作步骤
+##### 1.6.1 操作步骤
 
 a）选择“项目管理”，系统显示“项目管理”页面，如图1-15所示：
 
 ![1-15](https://www.feisuanyz.com/fsimage/zc-image/cz_9.6_01_img.png)
 
 ##### 图1-15 项目管理页面
+
+#### 1.7 添加项目加载项
+
+系统提供该功能，您可以加载项目的组件、资源、函数、插件和扩展JAR包。
+
+##### 前提条件：
+
+a）您需要拥有“运维管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.7.1 操作步骤
+
+a）选择“项目管理”，系统显示“项目管理”页面，如图1-19所示:
+
+![1-19](https://www.feisuanyz.com/fsimage/zc-image/cz_9.7_01_img.png)
+
+##### 图1-19 项目管理页面
+
+b）选择添加加载项的项目，单击右上角的“设置”选项，选择“加载项”，如图1-20所示。
+
+![1-20](https://www.feisuanyz.com/fsimage/zc-image/cz_9.7_02_img.png)
+
+##### 图1-20 加载项
+
+c）在加载项页面中平台集成了开发微服务项目使用到的组件、函数、插件、资源以及JAR扩展包，请根据实际选择开发需求所涉及到的组件或者资源，如图1-21所示：
+
+![1-21](https://www.feisuanyz.com/fsimage/zc-image/cz_9.7_03_img.png)
+
+##### 图1-21 添加项目加载项
+
+d）单击“加载应用” --> 系统提示“批量处理成功”。
+
+#### 1.8 项目发版
+
+本节主要介绍如何对已经开发完成的微服务项目，进行项目发版的具体操作方法。
+
+##### 1.8.1 操作步骤
+
+a）选择“项目管理”，系统显示“项目管理”页面，如图1-22所示：
+
+![1-22](https://www.feisuanyz.com/fsimage/zc-image/cz_9.8_01_img.png)
+
 
 b）选择需要转移的项目，单击右上角的“设置”选项，选择“创建人转移”，如图1-16所示：
 
@@ -191,3 +234,5 @@ d）单击“确定”，完成转移后的项目如图1-18所示：
 ##### 图1-18 完成创建人转移
 
 e）系统提示“操作成功”。
+
+
