--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -235,4 +235,54 @@ d）单击“确定”，完成转移后的项目如图1-18所示：
 
 e）系统提示“操作成功”。
 
+##### 图1-22 项目管理页面
 
+b）选择已经创建项目的卡片，单击右上角的“设置”选项，选择“发版”，如图1-23所示：
+
+![1-23](https://www.feisuanyz.com/fsimage/zc-image/cz_9.8_02_img.png)
+
+##### 图1-23 发版
+
+c）在“项目发版”页面中，输入项目发版的标签和描述，如图1-24所示：
+
+![1-24](https://www.feisuanyz.com/fsimage/zc-image/cz_9.8_03_img.png)
+
+##### 图1-24 项目发版页面
+
+d）单击“确定”。
+
+e）单击右上角的“设置”选项，选择“发版记录”，如图1-25所示：
+
+![1-25](https://www.feisuanyz.com/fsimage/zc-image/cz_9.8_03_img.png)
+
+##### 图1-25 发版记录
+
+f）在项目“发版记录”页面，进行查看项目发版记录的信息，如图1-26所示：
+
+![1-26](https://www.feisuanyz.com/fsimage/zc-image/cz_9.8_05_img.png)
+
+##### 图1-26 项目发版记录页面
+
+#### 1.9 下载项目资源
+
+系统提供该功能，您可以下载项目执行引擎包、下载项目部署包和下载项目源码包。
+
+##### 1.9.1 操作步骤
+
+a）选择“项目管理”，系统显示“项目管理”页面，如图1-27所示：
+
+![1-27](https://www.feisuanyz.com/fsimage/zc-image/cz_9.9_01_img.png)
+
+##### 图1-27 项目管理页面
+
+b）单击右上角的“设置”选项，选择“发版记录”，如图1-28所示：
+
+![1-28](https://www.feisuanyz.com/fsimage/zc-image/cz_9.9_02_img.png)
+
+##### 图1-28 发版记录
+
+c）在项目“发版记录”页面，您可以单击“下载执行引擎”可以下载项目执行引擎包，如图1-29所示：
+
+![1-29](https://www.feisuanyz.com/fsimage/zc-image/cz_9.9_03_img.png)
+
+##### 图1-29 发版记录
