--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -279,19 +279,19 @@ b）单击右上角的“设置”选项，选择“发版记录”，如图1-28
 
 ![1-28](https://www.feisuanyz.com/fsimage/zc-image/cz_9.9_02_img.png)
 
-##### 图1-28 发版记录
-
-c）在项目“发版记录”页面，您可以单击“下载执行引擎”可以下载项目执行引擎包，如图1-29所示：
-
-![1-29](https://www.feisuanyz.com/fsimage/zc-image/cz_9.9_03_img.png)
-
-##### 图1-29 发版记录
+##### 图1-29 下载执行引擎包
 
 d）在项目“发版记录”页面，您可以单击“操作”下载项目部署包进行下载，如图1-30所示：
 
 ![1-30](https://www.feisuanyz.com/fsimage/zc-image/cz_9.9_04_img.png)
 
-##### 图1-30 发版记录
+##### 图1-30 下载项目部署包
+
+e）在项目“发版记录”页面，您可以单击“操作”下载项目源码包进行下载，如图1-31所示：
+
+![1-31](https://www.feisuanyz.com/fsimage/zc-image/cz_9.9_05_img.png)
+
+##### 图1-31 下载项目源码包
 
 e）在项目“发版记录”页面，您可以单击“操作”下载项目源码包进行下载，如图1-31所示：
 
@@ -330,3 +330,47 @@ c）选择导出项目的环境，单击“确定”，如图1-33所示：
 ##### 图1-33 选择环境页面
 
 d）在系统提示导出项目信息中选择“确定”，如图1-34所示：
+
+![1-34](https://www.feisuanyz.com/fsimage/zc-image/cz_9.10-02_img.png)
+
+##### 图1-34 确认导出项目
+
+e）导出项目包，如图1-35所示：
+
+##### 说明：导出的项目包自动保存至本地PC默认的下载目录，您可以手工打开查看。
+
+![1-35](https://www.feisuanyz.com/fsimage/zc-image/xmgl/9_10_1.png)
+
+##### 图1-35 导出项目包
+
+#### 1.11 导入项目
+
+系统提供该功能，您可以在全自动开发平台导入微服务项目的信息。
+
+##### 前提条件：
+
+a）您需要拥有“项目管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.11.1 操作步骤
+
+a）选择“项目管理”，系统显示“项目管理”页面，如图1-36所示：
+
+![1-36](https://www.feisuanyz.com/fsimage/zc-image/cz_9.11-00_img.png)
+
+##### 图1-36 项目管理页面
+
+b）单击“导入项目”，系统显示“导入项目”页面，填写导入项目的基本信息并上传导入的项目包，如图1-37所示：
+
+![1-37](https://www.feisuanyz.com/fsimage/zc-image/cz_9.11-01_img.png)
+
+##### 图1-37 上传项目包页面
+
+c）单击“确定”，完成项目导入，如图1-38所示：
+
+![1-38](https://www.feisuanyz.com/fsimage/zc-image/cz_9.11-02_img.png)
+
+##### 图1-38 完成导入项目页面
+
+##### 说明：项目导入平台后系统会自动启动并运行项目，可刷新页面进行查看。若系统启动项目失败，请您手工单击“已停止”开关启动项目。
