--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -374,3 +374,47 @@ c）单击“确定”，完成项目导入，如图1-38所示：
 ##### 图1-38 完成导入项目页面
 
 ##### 说明：项目导入平台后系统会自动启动并运行项目，可刷新页面进行查看。若系统启动项目失败，请您手工单击“已停止”开关启动项目。
+
+#### 1.12 分页和置顶项目
+
+系统提供分页和置顶项目的功能，当项目过多时，用户可以自由选择每页显示多少个项目，也可以通过置顶功能，将最常用的项目置顶在最前面显示，减少寻找项目的步骤。
+
+##### 1.12.1 分页项目操作步骤
+
+a）进入平台项目管理页面，在该页面下方可以设置每页显示多少个项目，如图1-39所示：
+
+![1-39](https://www.feisuanyz.com/fsimage/zc-image/cz_9_12_1.png)
+
+##### 图1-39 项目管理页面
+
+##### 1.12.2 置顶项目操作步骤
+
+a）进入平台项目管理页面，单击需置顶项目项目卡片上的“设置”按钮，如图1-40所示：
+
+![1-40](https://www.feisuanyz.com/fsimage/zc-image/cz_9_12_2.png)
+
+##### 图1-40 单击设置按钮
+
+b）单击“置顶”，如图1-41所示：
+
+![1-41](https://www.feisuanyz.com/fsimage/zc-image/cz_9_12_3.png)
+
+##### 图1-41 设置置顶
+
+c）需置顶项目项目卡片右上方显示“置顶”标识，如图1-42所示：
+
+![1-42](https://www.feisuanyz.com/fsimage/zc-image/cz_9_12_4.png)
+
+##### 图1-42 显示“置顶”标识
+
+d）您也可以对置顶项目进行取消置顶操作，如图1-43所示：
+
+![1-43](https://www.feisuanyz.com/fsimage/zc-image/cz_9_12_5.png)
+
+##### 图1-43 取消置顶操作
+
+#### 1.13 项目发版比对
+
+项目发版之后可进行发版比对，以查看版本间的差异，包含接口、配置信息等全部内容。本节主要介绍进行项目发版比对的具体操作步骤。
+
+
