--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -417,4 +417,66 @@ d）您也可以对置顶项目进行取消置顶操作，如图1-43所示：
 
 项目发版之后可进行发版比对，以查看版本间的差异，包含接口、配置信息等全部内容。本节主要介绍进行项目发版比对的具体操作步骤。
 
+##### 1.13.1 操作步骤
 
+a）对项目进行发版，如图1-44及图1-45所示：
+
+![1-44](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_1.png)
+
+##### 图1-44 项目发版-1
+
+![1-45](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_2.png)
+
+##### 图1-45 项目发版-2
+
+b）查看发版记录，如图1-46所示：
+
+![1-46](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_3.png)
+
+##### 图1-46 查看发版记录
+
+c）在发版记录页面，点击发版比对，如图1-47所示：
+
+![1-47](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_4.png)
+
+##### 图1-47 发版记录
+
+d）选择比较版本，点击开始比较，如图1-48所示：
+
+![1-48](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_5.png)
+
+##### 图1-48 选择比较版本
+
+e）进入比对详情页面，包含项目版本信息以及接口管理、资源实例等功能模块的全部内容，如图1-49所示：
+
+![1-49](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_6.png)
+
+##### 图1-49 比对详情
+
+f）点击查看各个功能模块的比较数据，此处以接口管理为例。（其他功能模块的查看类似）。
+
+g）选中接口管理，展开接口模块的目录，如图1-50所示：
+
+##### 说明：比较版本对于被比较版本而言，黑色代表没有任何改动，蓝色代表修改，绿色代表新增，红色代表删除。
+
+![1-50](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_7.png)
+
+##### 图1-50 版本比较详情
+
+h）点击详情可查看版本间接口差异的具体内容，进入节点详情页面，点击开始比较，如图1-51所示：
+
+![1-51](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_9.png)
+
+##### 图1-51 开始比较
+
+i）点击查看流程图明细，可以看到流程图的变化，如图1-52所示：
+
+![1-52](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_9.png)
+
+##### 图1-52 查看流程图明细
+
+j）点击查看变量管理，可以看到变量的变化，如图1-53所示：
+
+![1-53](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_10.png)
+
+##### 图1-53 查看变量管理
