--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -480,3 +480,70 @@ j）点击查看变量管理，可以看到变量的变化，如图1-53所示：
 ![1-53](https://www.feisuanyz.com/fsimage/zc-image/xmgl/bbbd_10.png)
 
 ##### 图1-53 查看变量管理
+
+#### 1.14 项目分组
+
+系统提供该功能，用户可以对项目进行分组管理。同一租户下的用户共享项目分组的功能，用户可以创建多个分组，将项目通过分组进行归类，方便日后查找项目以及维护管理。本节主要介绍如何对项目进行分组。
+
+##### 1.14.1 操作步骤
+
+a）进入全自动开发平台项目管理页面，选择页面上方“创建分组”选项，如图1-54所示：
+
+![1-54](https://www.feisuanyz.com/fsimage/zc-image/xmgl/xmfz_1.png)
+
+##### 图1-54 创建分组
+
+b）系统显示新增分组页面，填写分组的名称和描述，单击“确定”，如图1-55所示：
+
+![1-55](https://www.feisuanyz.com/fsimage/zc-image/xmgl/xmfz_2.png)
+
+##### 图1-55 新增分组
+
+c）创建成功后，您可以在页面上方“当前分组”选项中查看刚创建的分组并进行分组切换，系统默认显示默认项目组，如图1-56所示：
+
+##### 说明：用户可以通过点击分组旁的删除或修改按钮，对分组进行删除或修改操作，但若当前分组下存在项目时，无法删除分组，需将分组下的项目均删除完成后才可删除分组。
+
+![1-56](https://www.feisuanyz.com/fsimage/zc-image/xmgl/xmfz_3.png)
+
+##### 图1-56 默认分组
+
+##### 注意：新建项目、复制项目或导入项目时，都必须选择项目分组，已进行分组的项目也可通过修改进行重新分组，以新建项目为例，如图1-57所示：
+
+![1-57](https://www.feisuanyz.com/fsimage/zc-image/xmgl/xmfz_4.png)
+
+##### 图1-57 分组切换
+
+#### 1.15 项目部署
+
+本节主要介绍对已经开发完成的微服务项目进行项目部署的具体操作方法。
+
+##### 前提条件
+
+您已经完成了项目发版的操作，具体可参见1.14项目发版。
+
+##### 1.15.1 操作步骤
+
+a）项目部署主要分为以下几步：a'）下载执行引擎包；b'）下载项目部署包；c'）启动项目
+
+##### 1.15.2 下载执行引擎包
+
+a）进入平台项目管理页面，单击页面右上方的下载按钮，如图1-58所示：
+
+![1-58](https://www.feisuanyz.com/fsimage/ks-image/ks_9_1_1.png)
+
+##### 图1-58  项目管理页面
+
+##### 1.15.3 下载项目部署包
+
+a）选择需进行项目部署的项目卡片，单击“设置”按钮，选择“发版记录”，如图1-59所示：
+
+![1-59](https://www.feisuanyz.com/fsimage/ks-image/ks_8-3_img.png)
+
+##### 图1-59 选择发版记录
+
+b）进入发版记录页面，单击“操作”列中如图1-60所示按钮，下载项目部署包：
+
+![1-60](https://www.feisuanyz.com/fsimage/ks-image/ks_8-4-2_img.png)
+
+##### 图1-60 下载项目部署包
+
