--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -547,3 +547,20 @@ b）进入发版记录页面，单击“操作”列中如图1-60所示按钮，
 
 ##### 图1-60 下载项目部署包
 
+##### 说明：在发版记录页面，也可以通过点击页面上方的“下载执行引擎”选项，下载最新的执行引擎包。
+
+c）在系统弹出“选择环境”对话框中选择开发项目的默认环境，如图1-61所示：
+
+##### 说明：一般选择默认环境即可，例如：默认开发环境为“测试环境”，部署包则选择测试环境。
+
+![1-61](https://www.feisuanyz.com/fsimage/ks-image/ks_8-5_img.png)
+
+##### 图1-61 选择环境
+
+d）单击“确定”即开始下载，并保存至本地PC：
+
+##### 注意：若系统出现如图1-62的红色提示，说明当前有最新版本的执行引擎包可供下载，您需要及时下载最新版本的执行引擎包后，再进行项目的部署；若执行引擎包未更新，则不会出现该红色提示。
+
+![1-62](https://www.feisuanyz.com/fsimage/ks-image/xmbushu_1.png)
+
+##### 图1-62 最新版本执行引擎包系统提示
