--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -564,3 +564,47 @@ d）单击“确定”即开始下载，并保存至本地PC：
 ![1-62](https://www.feisuanyz.com/fsimage/ks-image/xmbushu_1.png)
 
 ##### 图1-62 最新版本执行引擎包系统提示
+
+##### 1.15.4 启动项目
+
+a）解压下载的执行引擎包` feisuanyz-engine.zip `，如图1-63所示：
+
+![1-63](https://www.feisuanyz.com/fsimage/ks-image/ks_8-6_img.png)
+
+##### 图1-63 解压执行引擎包
+
+b）将下载的项目部署包(假设为newproject_606ff50b57da6c00088985b0_v5-deploy.zip)，移动到执行引擎包的apps目录下。
+
+##### 说明：a'）若解压后的执行引擎包没有apps目录，请手工创建apps目录；b'）项目部署默认不需要配置任何内容，启动端口默认为8080，日志文件默认存放在当前执行引擎包目录下面的logs目录中（该目录在项目服务启动后自动生成）。例如：若解压后的执行引擎包为` feisuanyz-engine-3.0.12 `，则日志生成路径是` feisuanyz-engine-3.0.12/logs `，若需要修改配置，您需要创建一个` application.yml `文件，该文件需要与` feisuanyz-engine.jar `存放到同一目录中。
+
+` application.yml `文件创建模板如下：
+
+
+```
+server:
+    # 服务端口
+    port: 8080
+
+# 系统日志配置（日志二选一）
+logging:
+    file:
+        path: /logs
+
+
+# 系统日志存储到kafka（日志二选一）
+logging:
+    config: classpath:logback-kafka.xml
+
+# kafka相关配置，日志默认是保存到本地文件中，我们也支持将日志存储到kafka，需要按照下面模板进行配置
+fs:
+    kafka:
+        producer-enabled: true
+        producers:
+            logback:
+            # kafka集群地址
+                bootstrapservers: bootstrap.servers=127.0.0.1:9092,127.0.0.2:9093,127.0.0.3:9092
+                # topic
+        topic: flow-system-logs
+```
+
+##### 注意：` application.yml `的日志的存储方式只能选择一种。
