--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -608,3 +608,40 @@ fs:
 ```
 
 ##### 注意：` application.yml `的日志的存储方式只能选择一种。
+
+c）（可选） 如果在Windows操作系统部署项目，则执行以下操作：
+
+a'）按下` Windows + R `键，输入` cmd `，调出命令行窗口。
+
+b'）进入执行引擎包的路径下。
+
+c'）输入` startup.bat `按回车启动项目服务，如图1-64所示：
+
+![1-64](https://www.feisuanyz.com/fsimage/ks-image/ks_8-7_img.png)
+
+##### 图1-64 Windows系统下部署项目
+
+##### 注意：默认服务端口是` 8080 `，日志存放路径是当前部署项目根目录，例如：` \feisuanyz-engine-3.0.12\logs `。
+
+d）如果在Linux操作系统部署项目，则执行以下操作：
+
+a'）使用工具或者通过二进制方式上传项目部署包至安装的服务器。
+
+b'）进入当前项目的安装路径下。
+
+c'）执行以下命令给安装脚本添加执行权限：` chmod a+x startup.sh `，` chmod a+x shutdown.sh `
+
+d'）执行` ./startup.sh `启动项目服务，如图1-65所示：
+
+![1-65](https://www.feisuanyz.com/fsimage/ks-image/ks_8-8_img.png)
+
+##### 图1-65 Linux系统下部署项目
+
+##### 注意：` startup.sh `为启动服务脚本；` shutdown.sh `为停止服务脚本；默认服务端口是` 8080 `，日志存放路径是当前部署项目根目录，例如：` /feisuanyz-engine-3.0.12/logs `。
+
+e）若出现如图1-65所示信息，即说明项目部署成功：
+
+![1-65](https://www.feisuanyz.com/fsimage/zc-image/ks_9_1_3.png)
+
+##### 图1-65 项目部署成功
+
