--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/8. 项目管理/项目管理.md
@@ -645,3 +645,28 @@ e）若出现如图1-65所示信息，即说明项目部署成功：
 
 ##### 图1-65 项目部署成功
 
+#### 1.16 项目发版恢复
+
+项目发版本之后，可以通过发版恢复功能，将当前项目恢复到历史版本。恢复完成后，当前项目的所有数据都变成历史版本的数据且不可撤回。
+
+##### 1.16.1 操作步骤
+
+a）点击发版记录，如图1-66所示：
+
+![1-66](https://www.feisuanyz.com/fsimage/zc-image/xmgl/fabanhuifu_1.png)
+
+##### 图1-66 点击发版记录
+
+b）点击发版恢复，如图1-67所示：
+
+![1-67](https://www.feisuanyz.com/fsimage/zc-image/xmgl/fabanhuifu_2.png)
+
+##### 图1-67 点击发版恢复
+
+c）选择要恢复的历史版本，如图1-68所示：
+
+![1-68](https://www.feisuanyz.com/fsimage/zc-image/xmgl/fabanhuifu_3.png)
+
+##### 图1-68 选择要恢复的历史版本
+
+d）点击恢复即可恢复成功。
