--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/1. 数据库设置管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/1. 数据库设置管理.md
@@ -1,1 +1,27 @@
-test
+### 1. 数据库设置管理
+
+#### 1.1 配置数据类型
+
+系统提供该功能，您可以在该系统中根据实际情况配置您所需要的数据库的数据类型。
+
+##### 前提条件：
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.1.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/zc_10-01_img.png)
+
+##### 图1-1 数据库设计页面
+
+b）单击“新增数据库”后的` ••• `，选择“数据库设置”，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/zc_10-02_img.png)
+
+##### 图1-2 数据库设置页面
+
+
