--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/1. 数据库设置管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/1. 数据库设置管理.md
@@ -24,4 +24,21 @@ b）单击“新增数据库”后的` ••• `，选择“数据库设置”
 
 ##### 图1-2 数据库设置页面
 
+c）在“数据类型配置”页面，配置数据类型的相关信息，如图1-3所示:
+
+![1-3](https://www.feisuanyz.com/fsimage/zc-image/zc_10-03_img.png)
+
+##### 图1-3 配置数据类型页面
+
+d）单击“保存勾选” --> 系统提示“操作成功”。
+
+#### 1.2 配置默认数据列
+
+系统提供该功能，您可以在该系统中对指定的数据库列进行新增、修改和删除操作。
+
+##### 前提条件：
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
 
