--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/1. 数据库设置管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/1. 数据库设置管理.md
@@ -42,3 +42,22 @@ a）您需要拥有“数据库设计”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
+##### 1.2.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图1-4 数据库设计页面
+
+b）单击“新增数据库”后的` ••• `，选择“数据库设置”，系统显示“数据库设置”页面，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_02.png)
+
+##### 图1-5 数据库设置页面
+
+c）选择“默认数据列配置”，系统显示“默认数据列配置”页面，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_03.png)
+
+##### 图1-6 默认数据列配置页面
