--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/1. 数据库设置管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/1. 数据库设置管理.md
@@ -87,3 +87,27 @@ g）单击“保存” --> 系统提示“操作成功”。
 a）您需要拥有“数据库设计”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.2.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图1-9 数据库设计页面
+
+b）单击“新增数据库”后的` ••• `，选择“数据库设置”，系统显示“数据库设置”页面，如图1-10所示：
+
+![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_02.png)
+
+##### 图1-10 数据库设置页面
+
+c）选择“表名显示配置”，系统显示“表名显示配置”页面，如图1-11所示：
+
+![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_3_03.png)
+
+##### 图1-11 表名显示配置页面
+
+d）在“表名显示配置”页面，配置表名的显示。
+
+e）单击“保存” --> 系统提示“操作成功”。
