--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
@@ -1,1 +1,25 @@
-test1
+### 2. 数据库管理
+
+#### 2.1 新增数据库
+
+系统提供该功能，您可以在该系统中新增项目数据库。
+
+##### 前提条件：
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.1.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图2-1 数据库设计页面
+
+b）单击“新增数据库”，系统弹出“新增项目数据库”对话框，输入项目数据库名称，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_1_02.png)
+
+##### 图2-2 新增数据库
