--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
@@ -49,3 +49,29 @@ b）选择需要修改的数据库，单击如图2-4所示的红框：
 ![2-4](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_2_02.png)
 
 ##### 图2-4 新增数据库
+
+c）选择“修改数据库”，系统弹出“编辑项目数据库”对话框，输入修改的项目数据库名称，如图2-5所示：
+
+![2-5](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_2_03.png)
+
+##### 图2-5 修改数据库名称
+
+d）单击“确定” --> 系统提示“修改成功”。
+
+#### 2.3 删除数据库
+
+系统提供该功能，您可以进行删除项目数据库，删除前确保该数据库组下面没有关联的模块。
+
+##### 前提条件：
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.3.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-6所示：
+
+![2-6](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图2-6 数据库设计页面
