--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
@@ -99,3 +99,36 @@ d）单击“确定” --> 系统提示“操作成功”。
 a）您需要拥有“数据库设计”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.4.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-9所示：
+
+![2-9](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图2-9 数据库设计页面
+
+b）单击“新增数据库”后的` ••• `选择“显示已删除数据库”，在数据库列表显示已经删除的数据库，如图2-10所示：
+
+![2-10](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_4_02.png)
+
+##### 图2-10 显示已经删除数据库
+
+c）单击图2-11所示的红框，选择“恢复数据库” --> 系统提示“操作成功”。
+
+![2-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_4_03.png)
+
+##### 图2-11 恢复数据库
+
+#### 2.5 连接数据库
+
+系统提供该功能，您可以在该系统中连接上服务器的数据库。
+
+##### 前提条件：
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.5.1 操作步骤
+
