--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
@@ -132,3 +132,32 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 2.5.1 操作步骤
 
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-12所示：
+
+![2-12](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图2-12 数据库设计页面
+
+b）选择需要连接的数据库名称，单击如图2-13所示的红框：
+
+![2-13](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_02.png)
+
+##### 图2-13 选择数据库
+
+c）选择“数据库连接”，系统弹出“数据库连接管理”对话框，如图2-14所示：
+
+![2-14](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_03.png)
+
+##### 图2-14 数据库连接管理
+
+d） 单击“新增”，系统显示“新增数据库连接”页面，如图2-15所示：
+
+![2-15](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_04.png)
+
+##### 图2-15 新增数据库连接
+
+d）配置项目数据库的相关信息，如图2-16所示：
+
+![2-16](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_05.png)
+
+##### 图2-16 配置数据库信息
