--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
@@ -161,3 +161,37 @@ d）配置项目数据库的相关信息，如图2-16所示：
 ![2-16](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_05.png)
 
 ##### 图2-16 配置数据库信息
+
+##### 说明：
+##### 其中数据库的“连接名”可自行定义。
+##### 若想自定义URL，请打开“是否自定URL”的开关，然后在“地址”栏输入定义的URL。
+
+e）单击“测试”，测试连接的数据库是否正确。
+
+· 若提示“连接成功”信息，说明连接数据库正确；
+
+· 若提示失败信息，请检查连接数据库的相关配置信息，请修改为正确再重新测试。
+
+f）单击“提交”，系统提示“新增成功”信息，如图2-17所示：
+
+![2-17](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_06.png)
+
+##### 图2-17 新增成功
+
+##### 说明：
+
+##### 您可以单击“删除”列的删除按钮，删除连接的数据库。
+
+##### 您可以单击“删除”列的修改按钮，修改连接的数据库的配置信息。
+
+#### 2.6 导出数据库文档
+
+系统提供该功能，您可以直接导出数据库的结构文档，更加清晰地看到数据库的设计结构。
+
+##### 2.6.1 操作步骤
+
+a）进入平台模块功能页面，选择“数据库设计”功能模块，系统显示“数据库设计”页面，如图2-18所示：
+
+![2-18](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_1.png)
+
+##### 图2-12 数据库设计页面
