--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/2. 数据库管理.md
@@ -225,3 +225,27 @@ f）选择数据库连接，如图2-23所示：
 ![2-23](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_6.png)
 
 ##### 图2-23 选择数据库连接
+
+g）“导出数据库文档”页面显示出可供选择的数据表，如图2-24所示：
+
+![2-24](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_7.png)
+
+##### 图2-24 数据表显示
+
+h）勾选需导出数据库文档的数据表，如图2-25所示：
+
+![2-25](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_8.png)
+
+##### 图2-25 勾选数据表
+
+i）单击“导出”，页面下方自动生成导出文档，如图2-26所示：
+
+![2-26](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_9.png)
+
+##### 图2-26 导出文档自动生成
+
+j）打开生成的文档，如图2-27所示：
+
+![2-27](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_10.png)
+
+##### 图2-27 导出文档示例
