--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/3. 数据库模块管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/3. 数据库模块管理.md
@@ -1,1 +1,26 @@
-test1
+### 3. 数据库模块管理
+
+#### 3.1 新增模块组
+
+系统提供该功能，您可以在该系统中新增项目数据库模块组。
+
+##### 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 3.1.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图3-1 数据库设计页面
+
+b）选择需要新增模块组的数据库，单击“+”并选择“新增模块组”，系统弹出“新增项目模块”对话框，输入模块组名称，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_1_02.png)
+
+##### 图3-2 新增项目数据库模块组
+
