--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/3. 数据库模块管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/3. 数据库模块管理.md
@@ -99,3 +99,27 @@ d） 单击“确定” --> 系统提示“操作成功”。
 a）您需要拥有“数据库设计”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 3.3.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图3-9所示：
+
+![3-9](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图3-9 数据库设计页面
+
+b）选择需要恢复模块组所在的数据库，单击如图3-10所示的红框：
+
+![3-10](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_4_02.png)
+
+##### 图3-10 选择数据库
+
+c）选择“显示已删除数据”。
+
+d）选择需要恢复的模块组，单击如图3-11所示的红框：
+
+![3-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_4_03.png)
+
+##### 图3-11 选择模块组
+
+e）选择“恢复模块” --> 系统提示“操作成功”。
