--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/4. 表管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/4. 表管理.md
@@ -1,1 +1,113 @@
-test1
+### 4. 表管理
+
+#### 4.1 新增表
+
+系统提供该功能，您可以在数据库模块组新增表，并对新增的表进行基础的操作。例如：添加表字段、表索引和表外键信息。
+
+##### 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.1.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图4-1 数据库设计页面
+
+b）选择需要新增表的模块组，单击“+”并选择“新增表”，如图4-2所示：
+
+![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_1_02.png)
+
+##### 图4-2 选择模块组
+
+c）系统弹出“新增表”对话框，输入表名称及表注释，如图4-3所示：
+
+![4-3](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_1_03.png)
+
+##### 图4-2 新增表
+
+d）单击“确定” --> 系统提示“新增成功”。
+
+##### 4.1.2 后续处理
+
+a）在新增完数据库的表后，您还可以执行以下操作：
+
+双击选择新增的表，系统显示“编辑表信息管理”页面，您可以对新增表的基本、字段、索引以及外键信息进行编辑，如图4-4所示：
+
+![4-4](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_1_05.png)
+
+##### 图4-4 编辑表信息管理
+
+#### 4.2 修改表
+
+系统提供该功能，您可以对新增数据表的各项信息进行修改。
+
+##### 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.2.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-5所示：
+
+![4-5](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图4-5 数据库设计页面
+
+b）选择需要进行修改的数据表，单击如图4-6所示的红框：
+
+![4-6](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_2_02.png)
+
+##### 图4-6 选择数据表
+
+c）选择“修改表”，系统显示“编写表信息管理”页面，您可以修改数据表的信息，修改完单击“保存”即可，如图4-7所示：
+
+![4-7](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_2_03.png)
+
+##### 图4-7 “编写表信息管理”页面
+
+#### 4.3 复制表
+
+系统提供该功能，您可以对已创建的数据表执行复制、剪切和粘贴的操作。
+
+##### 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.3.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-8所示。
+
+![4-8](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图4-8 数据库设计页面
+
+b）选择需要进行复制的数据表，单击如图4-9所示的标号1红框，选择“复制表”：
+
+![4-9](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_3_02.png)
+
+##### 图4-9 复制表
+
+##### 说明：您也可以选择 “剪切表”将数据表剪切到想要粘贴的模块组，之后的步骤和复制表类似。
+
+c）选择需粘贴的数据库模块组，单击如图所示的标号1红框，选择“粘贴表”，如图4-10所示：
+
+![4-10](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_3_03.png)
+
+##### 图4-10 粘贴表
+
+d）这时复制的数据表会在相应的数据库模块组显示，如图4-11所示：
+
+![4-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_3_04.png)
+
+##### 图4-11 复制后的数据表显示
+
+
