--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/4. 表管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/4. 表管理.md
@@ -110,4 +110,32 @@ d）这时复制的数据表会在相应的数据库模块组显示，如图4-11
 
 ##### 图4-11 复制后的数据表显示
 
+#### 4.4 查看表历史版本
 
+系统提供该功能，您可以查看指定数据表所有的历史版本，并进行不同版本之间的比较。
+
+##### 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.4.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-12所示：
+
+![4-12](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+
+##### 图4-12 数据库设计页面
+
+b）选择需要查看历史版本的数据表，单击如图4-13标号1的红框，并选择“修改日志”：
+
+![4-13](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_02.png)
+
+##### 图4-13 选择修改日志
+
+c）系统弹出该数据表的“修改日志列表”页面，单击“打开”，可以看到各个时间的数据表版本，如图4-14所示：
+
+![4-14](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_03.png)
+
+##### 图4-14 修改日志列表页面
