--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/4. 表管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/4. 表管理.md
@@ -191,3 +191,31 @@ c）单击“确定” --> 系统提示“操作成功”。
 a）您需要拥有“数据库设计”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.6.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-20所示：
+
+![4-20](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_01.png)
+
+##### 图4-20 数据库设计页面
+
+b）选择需要恢复数据表所在的模块组，单击如图4-21所示标号1的红框，选择“显示/隐藏已删除表”：
+
+![4-21](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_6_02.png)
+
+##### 图4-21 选择模块组
+
+c）可以看到在该模块组下出现了已经被删除的数据表，单击如图4-22所示的红框，选择“恢复表”：
+
+![4-22](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_6_03.png)
+
+##### 图4-22 恢复表
+
+d）如图4-23所示，可以看到已删除的数据表显示正常：
+
+![4-23](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_6_04.png)
+
+##### 图4-23 已删除的数据表显示正常
+
+#### 4.7 逆向解析表
