--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/4. 表管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/4. 表管理.md
@@ -219,3 +219,49 @@ d）如图4-23所示，可以看到已删除的数据表显示正常：
 ##### 图4-23 已删除的数据表显示正常
 
 #### 4.7 逆向解析表
+
+系统提供该功能，您可以将服务器中已存在的数据表逆向解析到数据库的模块组。
+
+##### 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.7.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-24所示：
+
+![4-24](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_01.png)
+
+##### 图4-24 数据库设计页面
+
+b）选择需要将数据表逆向解析到的模块组，单击如图4-25所示标号1的红框，选择“逆向解析”：
+
+![4-25](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_02.png)
+
+##### 图4-25 选择逆向解析
+
+c）系统弹出“数据库逆向解析”对话框，如图4-26所示，选择需要解析的数据库，单击“下一步”：
+
+![4-26](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_03.png)
+
+##### 图4-26 选择数据库
+
+d）系统弹出“当前解析数据库”对话框，如图4-27所示，选择进行解析的数据表，单击“下一步”：
+
+![4-27](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_04.png)
+
+##### 图4-27 选择数据表
+
+e）系统弹出“表的字段详情”对话框，如图4-28所示，您可以对数据表字段的导入数据类型进行修改：
+
+![4-28](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_05.png)
+
+##### 图4-28 修改导入字段的数据类型
+
+f）修改完成后，单击“逆向解析”，可在模块组下看到逆向解析得到的数据表，如图4-29所示：
+
+![4-29](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_06.png)
+
+##### 图4-29 数据表显示在模块组下
