--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/5. 数据库版本管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/9. 数据库设计/5. 数据库版本管理.md
@@ -93,3 +93,40 @@ f）系统提示“确定同步？”，单击“确定”，如图5-11所示：
 ![5-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_2_06.png)
 
 ##### 图5-11 是否确定同步
+
+g）系统显示同步日志，提示“同步完成”，如图5-12所示：
+
+![5-12](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_2_07.png)
+
+##### 图5-12 同步完成日志
+
+#### 5.3 重建版本线
+
+系统提供该功能，您可以重建数据库的版本线。
+
+##### 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 5.3.1 操作步骤
+
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图5-13所示：
+
+![5-13](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_01.png)
+
+##### 图5-13 数据库设计页面
+
+b）选择需要重建版本线的数据库，单击如图5-14所示标号1的红框，选择“数据库版本”：
+
+![5-14](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_1_02.png)
+
+##### 图5-14  选择数据库版本
+
+c）系统显示“设计版本管理”页面，单击“重建版本线”，如图5-15所示：
+
+![5-15](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_3_03.png)
+
+##### 图5-15 设计版本管理页面
+
