--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -1,1 +1,27 @@
-test
+### 1. 新增资源实例
+
+#### 1.1 新增分布式中间件资源
+
+系统提供该功能，您可以新增分布式中间件资源。
+
+##### 前提条件
+
+a）您需要拥有“资源实例”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）您需要预先添加分布式中间件资源加载项，具体可参见[《SoFlu社区版快速入门教程：4.9 如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md)。
+
+##### 1.1.1 操作步骤
+
+a）进入平台“资源实例”功能模块，可以看到列表中预先加载的“分布式中间件”资源类型，选中该资源类型，单击“+”按钮，选择“新增资源实例”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/11-2_img.png)
+
+##### 图1-1 资源实例页面
+
+b）在“新增资源实例”页面，填写资源名称及描述，同时填写配置项信息，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/zysl/fenbushi_1.png)
+
+##### 图1-2 填写配置项信息
