--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -57,3 +57,35 @@ b）单击“嵌入式中间件”后的“+”，选择“新增资源实例”
 ![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-2_img.png)
 
 ##### 图1-4 新增资源实例
+
+c）在“资源实例管理”页面，选择系统默认的环境，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-3_img.png)
+
+##### 图1-5 选择系统默认的环境
+
+d）请根据资源实例的实际信息，配置资源实例的配置项信息，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-4_img.png)
+
+##### 图1-6 配置资源实例的配置项
+
+##### 说明：本节是以配置嵌入式中间件为样例做说明，其他资源配置的配置项，请根据实际进行配置。目前嵌入式中间件必须配置的项包括：驱动类、连接地址、用户名、密码和初始化大小等。
+
+e）单击“提交” --> 系统提示“新增成功”。
+
+f）在“资源实例管理”页面，成功新增一个分布式中间件的资源实例，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-5_img.png)
+
+##### 图1-7 新增分布式中间件
+
+#### 1.3 新增SFTP存储资源
+
+系统提供该功能，您可以资源实例管理中新增SFTP存储资源。
+
+##### 前提条件
+
+a）您需要拥有“资源实例”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
