--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -130,3 +130,26 @@ a）在项目管理页面中，选择“资源实例”，如图1-11所示:
 
 ##### 图1-11 选择资源实例
 
+b）单击“Minio存储”后的“+”，选择“新增资源实例”，如图1-12所示：
+
+![1-12](https://www.feisuanyz.com/fsimage/zc-image/cz_11_4_02.png)
+
+##### 图1-12 新增资源实例
+
+c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-13所示：
+
+![1-13](https://www.feisuanyz.com/fsimage/zc-image/cz_11_4_03.png)
+
+##### 图1-13 配置配置项信息
+
+d）配置完成后，单击“提交” --> 系统提示“新增成功”。
+
+#### 1.5 新增Xeos存储资源
+
+系统提供该功能，您可以资源实例管理中新增Xeos存储资源。
+
+##### 前提条件
+
+a）您需要拥有“资源实例”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
