--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -153,3 +153,25 @@ d）配置完成后，单击“提交” --> 系统提示“新增成功”。
 a）您需要拥有“资源实例”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.5.1 操作步骤
+
+a）在项目管理页面中，选择“资源实例”，如图1-14所示：
+
+![1-14](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+
+##### 图1-14 选择资源实例
+
+b）单击“Xeos存储”后的“+”，选择“新增资源实例”，如图1-15所示：
+
+![1-15](https://www.feisuanyz.com/fsimage/zc-image/cz_11_5_02.png)
+
+##### 图1-15 新增资源实例
+
+c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-16所示：
+
+![1-16](https://www.feisuanyz.com/fsimage/zc-image/cz_11_5_03.png)
+
+##### 图1-16 配置配置项信息
+
+d）配置完成后，单击“提交” --> 系统提示“新增成功”。
