--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -297,3 +297,35 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 c）您需要提前在项目加载项添加Http组件加载项，添加项目加载项方式参见[《项目管理 第1.7节：添加项目加载项》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86.md#17-%E6%B7%BB%E5%8A%A0%E9%A1%B9%E7%9B%AE%E5%8A%A0%E8%BD%BD%E9%A1%B9)。
 
 ##### 1.9.1 操作步骤
+
+a）在项目管理页面中，选择“资源实例”，如图1-28所示：
+
+![1-28](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+
+##### 图1-28 选择资源实例
+
+b）单击“Http通信”后的“+”，选择“新增资源实例”，如图1-29所示：
+
+![1-29](https://www.feisuanyz.com/fsimage/zc-image/cz_11_9_02.png)
+
+##### 图1-29 新增资源实例
+
+c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-30所示：
+
+![1-30](https://www.feisuanyz.com/fsimage/zc-image/cz_11_9_03.png)
+
+##### 图1-30 配置配置项信息
+
+##### 说明：Http通信资源的新增暂时可以不用强制填写配置项信息即可提交成功。
+
+d）配置完成后，单击“提交” --> 系统提示“新增成功”。
+
+#### 1.10 新增MongoDB数据库资源
+
+系统提供该功能，您可以资源实例管理中新增MongoDB数据库资源。
+
+##### 前提条件
+
+a）您需要拥有“资源实例”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
