--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -329,3 +329,33 @@ d）配置完成后，单击“提交” --> 系统提示“新增成功”。
 a）您需要拥有“资源实例”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.10.1 操作步骤
+
+a）在项目管理页面中，选择“资源实例”，如图1-31所示：
+
+![1-31](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+
+##### 图1-31 选择资源实例
+
+b）单击“Redis缓存”后的“+”，选择“新增资源实例”，如图1-32所示：
+
+![1-32](https://www.feisuanyz.com/fsimage/zc-image/cz_11_10_02.png)
+
+##### 图1-32 新增资源实例
+
+c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-33所示：
+
+![1-33](https://www.feisuanyz.com/fsimage/zc-image/cz_11_10_03.png)
+
+##### 图1-33 填写配置项信息
+
+d）您也可以单击“示例”参考配置项信息，进入“资源实例示例”页面，示例包含“MongoBb单个地址配置”和“MongoBb多个地址配置”两种，如图1-34、1-35所示：
+
+![1-34](https://www.feisuanyz.com/fsimage/zc-image/cz_11_10_05.png)
+
+##### 图1-34 单击示例
+
+![1-35](https://www.feisuanyz.com/fsimage/zc-image/cz_11_10_04.png)
+
+##### 图1-35 资源实例示例页面
