--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -381,3 +381,28 @@ a）在项目管理页面中，选择“资源实例”，如图1-36所示：
 ![1-36](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
 
 ##### 图1-36 选择资源实例
+
+b）单击“线程池”后的“+”，选择“新增资源实例”，如图1-37所示：
+
+![1-37](https://www.feisuanyz.com/fsimage/zc-image/cz_11_11_02.png)
+
+##### 图1-37 新增资源实例
+
+c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-38所示：
+
+![1-38](https://www.feisuanyz.com/fsimage/zc-image/cz_11_11_03.png)
+
+##### 图1-38 配置配置项信息
+
+d）配置完成后，单击“提交” --> 系统提示“新增成功”。
+
+#### 1.12 新增Elasticsearch资源
+
+系统提供该功能，您可以资源实例管理中新增Elasticsearch资源。
+
+##### 前提条件
+
+a）您需要拥有“资源实例”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
