--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -406,3 +406,36 @@ a）您需要拥有“资源实例”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
+##### 1.12.1 操作步骤
+
+a）在项目管理页面中，选择“资源实例”，如图1-36所示：
+
+![1-39](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+
+##### 图1-39 选择资源实例
+
+b）单击“Elasticsearch”后的“+”，选择“新增资源实例”，如图1-40所示：
+
+![1-40](https://www.feisuanyz.com/fsimage/zc-image/cz_11_12_02.png)
+
+##### 图1-40 新增资源实例
+
+c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-41所示：
+
+![1-41](https://www.feisuanyz.com/fsimage/zc-image/cz_11_12_03.png)
+
+##### 图1-41 配置配置项信息
+
+d）配置完成后，单击“提交” --> 系统提示“新增成功”。
+
+#### 1.13 新增数据库中间件资源
+
+数据库中间件是分布式中间件和嵌入式中间件的结合体。用户可通过数据库中间件的checkDal配置来选择中间件类型，无须再单独添加分布式中间件或嵌入式中间件。本节主要介绍如何新增数据库中间件资源实例以及如何进行相关配置。
+
+##### 1.13.1 操作步骤
+
+a）单击项目卡片上的配置按钮，选择加载项，进入项目加载项页面，如图1-42所示：
+
+![1-42](https://www.feisuanyz.com/fsimage/zc-image/czzn_11_14_1.png)
+
+##### 图1-42 选择加载项
