--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -489,3 +489,29 @@ g）进入新增资源实例页面，您可以开始进行相关配置，如图1
 ![1-50](https://www.feisuanyz.com/fsimage/zc-image/czzn_11_14_9.png)
 
 ##### 图1-50 嵌入式中间件配置1
+
+![1-51](https://www.feisuanyz.com/fsimage/zc-image/czzn_11_14_10.png)
+
+##### 图1-51 嵌入式中间件配置2
+
+![1-52](https://www.feisuanyz.com/fsimage/zc-image/zysl/czzn_11_14_11.png)
+
+##### 图1-52 zkAddress账号信息设置
+
+h）配置完成后，单击“提交”即可，系统显示新增成功。
+
+#### 1.14 新增路由中间件资源
+
+路由中间件用于SQL组件中指引其他中间件资源（如分布式、嵌入式或数据库中间件资源），通过在SQL组件中配置路由中间件资源实例并设置指定资源实例的key值，可以让SQL组件在运行时优先执行指定key值的中间件资源；若未配置，SQL组件会根据SQL组中配置的中间件资源来执行。本节将介绍如何新增路由中间件资源以及如何在SQL组件中配置使用。
+
+##### 前提条件
+
+a）您需要提前创建好分布式中间件或者嵌入式中间件或者数据库中间件的资源实例，三者中起码存在一种。
+
+##### 1.14.1 操作步骤
+
+a）在项目中添加路由中间件加载项，如图1-53所示：
+
+![1-53](https://www.feisuanyz.com/fsimage/zc-image/zysl/1.png)
+
+##### 图1-53 添加加载项
