--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/1. 新增资源实例.md
@@ -515,3 +515,29 @@ a）在项目中添加路由中间件加载项，如图1-53所示：
 ![1-53](https://www.feisuanyz.com/fsimage/zc-image/zysl/1.png)
 
 ##### 图1-53 添加加载项
+
+b）新增路由中间件资源实例，如图1-54所示：
+
+![1-54](https://www.feisuanyz.com/fsimage/zc-image/zysl/2.png)
+
+##### 图1-54 新增加载项
+
+c）编辑资源实例，填写` routeValue `的值，如图1-55所示：
+
+![1-55](https://www.feisuanyz.com/fsimage/zc-image/zysl/9.png)
+
+##### 图1-55 编辑资源实例
+
+##### 注意：` routeValue `的值为json格式，即{"自定义名称":"嵌入式资源实例或分布式资源实例资源名称"}，多个资源用英文逗号隔开，如{"a":"blackliststi";"b":"分布式"}，a指向的是嵌入式的` blackliststi `资源实例，b指向的是分布式的分布式资源实例。
+
+d）填写完成后，单击“提交”，系统会进行校验，若填写的资源名称不存在，则会弹出资源实例创建提示，如图1-56所示：
+
+![1-56](https://www.feisuanyz.com/fsimage/zc-image/zysl/7.png)
+
+##### 图1-56 填写完成点击提交
+
+e）进入流程图编辑，以单SQL组件为例（分页SQL组件，多SQL组件使用同理），如图1-57所示：
+
+![1-57](https://www.feisuanyz.com/fsimage/zc-image/zysl/10.png)
+
+##### 图1-57 流程图编辑
