--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/3. 导入资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/3. 导入资源实例.md
@@ -1,1 +1,21 @@
-test
+### 3. 导入资源实例
+
+#### 3.1 导入资源实例
+
+系统提供该功能，用户可以在不同项目之间导入资源实例，以减少频繁添加公共的资源实例。
+
+##### 前提条件
+
+a）您需要拥有“资源实例”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）您需要预先添加分布式中间件资源加载项，具体可参见[《SoFlu社区版快速入门教程：4.9 如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md)。
+
+##### 3.1.1 操作步骤
+
+a）进入资源实例模块，单击“导入资源实例”，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_6.png)
+
+##### 图3-1 选择导入资源实例
