--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/3. 导入资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/3. 导入资源实例.md
@@ -43,3 +43,13 @@ b）系统显示导入资源实例页面，选择需导入的资源实例JSON文
 ##### 图3-5 导入资源实例显示正常
 
 ##### 场景2：若您需导入的资源实例在平台上已存在时，您需选中“覆盖原有资源实例”，这时系统会提示“导入资源实例成功”，且原有的资源实例会被删除，否则系统会提示“导入资源实例失败”，如图3-6所示：
+
+![3-6](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_11.png)
+
+##### 图3-6 导入失败提示
+
+##### 场景3：若您需导入的资源实例在平台中没有添加对应的资源实例类型时，系统会提示对应资源实例类型没有加载，您需要先手动加载对应资源类型后再进行资源实例的导入，如图3-7所示。（关于加载对应资源实例类型可参见快速入门2.2如何加载资源）
+
+![3-7](https://www.feisuanyz.com/fsimage/zc-image/zysl/daoru.png)
+
+##### 图3-7 导入失败提示
