--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/4. 导出资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/10. 资源实例/4. 导出资源实例.md
@@ -1,1 +1,27 @@
-test
+### 4. 导出资源实例
+
+#### 4.1 导出资源实例
+
+系统提供该功能，用户可以在不同项目之间导出资源实例，以减少频繁添加公共的资源实例。
+
+##### 前提条件
+
+a）您需要拥有“资源实例”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.1.1 操作步骤
+
+a）进入资源实例模块，单击“导入资源实例”旁的三个点符号，选择“导出资源实例”，如图4-1、4-2所示：
+
+![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_12.png)
+
+##### 图4-1 选择导出资源实例
+
+![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_13.png)
+
+##### 图4-2 选择导出资源实例
+
+b）系统显示导出资源实例页面，输入导出资源实例文件的文件名（若未输入则自动生成），勾选需导出的资源实例，单击“确定”，如图4-3所示：
+
+![4-3](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_14.png)
