--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/1. SQL组管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/1. SQL组管理.md
@@ -1,1 +1,27 @@
-test
+### 1. SQL组管理
+
+#### 1.1 新增SQL组
+
+系统提供该功能，您可以进行创建SQL组。
+
+##### 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）已经成功连接数据库和DAL中间件。
+
+##### 1.1.1 操作步骤
+
+a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/9-1_img.png)
+
+##### 图1-1 SQL管理页面
+
+a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/9-1_img.png)
+
+##### 图1-1 SQL管理页面
