--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/1. SQL组管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/1. SQL组管理.md
@@ -43,3 +43,27 @@ c）单击“提交” -->系统提示“新增成功”，完成新增SQL组，
 ![1-3](https://www.feisuanyz.com/fsimage/zc-image/9-3_img.png)
 
 ##### 图1-3 新添加的SQL组
+
+#### 1.2 修改SQL组
+
+系统提供该功能，您可以进行修改SQL组的信息。
+
+##### 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.2.1 操作步骤
+
+a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/9-4_img.png)
+
+##### 图1-4 SQL管理页面
+
+b）选择需要修改的SQL组，单击“ ”，系统显示“编辑SQL组”页面，修改SQL组的相关信息，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/9-5_img.png)
+
+##### 图1-5 修改SQL组
