--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/1. SQL组管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/1. SQL组管理.md
@@ -67,3 +67,25 @@ b）选择需要修改的SQL组，单击“ ”，系统显示“编辑SQL组”
 ![1-5](https://www.feisuanyz.com/fsimage/zc-image/9-5_img.png)
 
 ##### 图1-5 修改SQL组
+
+##### 说明：您可以单击“复制SQL组”复制SQL组的信息。
+
+c）单击“提交” --> 系统提示“修改成功”。
+
+#### 1.3 删除SQL组
+
+系统提供该功能，您可以进行删除SQL组的配置信息，删除前确保该SQL组下面没有关联的SQL模块。
+
+##### 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.3.1 操作步骤
+
+a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/9-6_img.png)
+
+##### 图1-6 SQL管理页面
