--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/2. SQL模块管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/2. SQL模块管理.md
@@ -1,1 +1,26 @@
-test
+### 2. SQL模块管理
+
+#### 2.1 新增SQL模块
+
+系统提供该功能，您可以进行创建SQL模块。
+
+##### 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.1.1 操作步骤
+
+a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/zc-image/9-10.img.png)
+
+##### 图2-1 SQL管理页面
+
+b）选择需要添加模块的SQL组，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fsimage/zc-image/9-11.img.png)
+
+##### 图2-2 选择SQL组
+
