--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/2. SQL模块管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/2. SQL模块管理.md
@@ -24,3 +24,28 @@ b）选择需要添加模块的SQL组，如图2-2所示：
 
 ##### 图2-2 选择SQL组
 
+）单击“添加模块”，系统显示“新增SQL模块”对话框，输入SQL模块名称及描述，如图2-3所示：
+
+![2-3](https://www.feisuanyz.com/fsimage/zc-image/9-12.img.png)
+
+##### 图2-3 添加SQL模块
+
+d）单击“确定” --> 系统提示“新增成功”。
+
+#### 2.2 修改SQL模块
+
+系统提供该功能，您可以进行修改SQL模块的信息。
+
+##### 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.2.1 操作步骤
+
+a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图2-4所示：
+
+![2-4](https://www.feisuanyz.com/fsimage/zc-image/9-13.img.png)
+
+##### 图2-4 SQL管理页面
