--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/2. SQL模块管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/2. SQL模块管理.md
@@ -75,3 +75,21 @@ c）单击“确定” --> 系统提示“修改成功”。
 a）您需要拥有“SQL管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.3.1 操作步骤
+
+a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图2-7所示：
+
+![2-7](https://www.feisuanyz.com/fsimage/zc-image/9-16.img.png)
+
+##### 图2-7 SQL管理页面
+
+b）选择需要删除模块的SQL组，如图2-8所示：
+
+![2-8](https://www.feisuanyz.com/fsimage/zc-image/9-17.img.png)
+
+##### 图2-8 选择SQL组
+
+c）选择需要删除的SQL模块，单击SQL模块后的“删除”图标 --> 系统提示“确定删除该SQL模块吗？”。
+
+d）单击“确定” --> 系统提示“操作成功”。
