--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/3. SQL信息管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/3. SQL信息管理.md
@@ -1,1 +1,21 @@
-test
+### 3. SQL信息管理
+
+#### 3.1 新增SQL信息
+
+系统提供该功能，您可以进行创建SQL信息。
+
+##### 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）已经在数据库里面成功创建数据库的表。
+
+##### 3.1.1 操作步骤
+
+a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/zc-image/9-22_img.png)
+
+##### 图3-1 SQL管理页面
