--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/3. SQL信息管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/11. SQL管理/3. SQL信息管理.md
@@ -155,3 +155,7 @@ c）选择SQL信息的SQL模块，选择需要删除的SQL信息，如图3-16所
 ![3-16](https://www.feisuanyz.com/fsimage/zc-image/cz_12-8_img.png)
 
 ##### 图3-16 选择删除的SQL信息
+
+d）单击“删除” --> 系统提示“确认要删除这条数据吗？”。
+
+e）单击“确定” --> 系统提示“删除成功”。
