--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/12. 实体模型/2. 实体模型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/12. 实体模型/2. 实体模型.md
@@ -1,1 +1,27 @@
-test
+### 2. 实体模型
+
+#### 2.1 新增实体模型
+
+本节主要介绍如何新增实体模型的具体操作方法。
+
+#### 前提条件
+
+您已创建好实体模型模块。
+
+##### 2.1.1 操作步骤
+
+a）选中已创建的实体模型模块，单击“+”选择“新增实体模型”，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/ks-image/ks_19-03_img.png)
+
+##### 图2-1 新增实体模型页面
+
+b）系统显示新增实体模型页面，输入实体模型的名称和描述，单击“新增”，根据实际需求添加实体模型字段，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fsimage/ks-image/ks_19-04_img.png)
+
+##### 图2-2 添加实体模型字段
+
+c）单击“提交”，系统显示新增成功。
+
+#### 2.2 复制、导入、导出实体模型
