--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/14. 子流程管理/1. 子流程模块.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/14. 子流程管理/1. 子流程模块.md
@@ -1,1 +1,13 @@
-test
+### 1. 子流程模块
+
+#### 1.1 新增子流程模块
+
+本节主要介绍如何新增配置组的具体操作方法。
+
+##### 1.1.1 操作步骤
+
+a）在项目管理页面中，选择“配置组管理”，系统显示配置组管理页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_14-01_img.png)
+
+##### 图1-1 选择配置组管理
