--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/14. 子流程管理/2. 子流程.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/14. 子流程管理/2. 子流程.md
@@ -2,12 +2,26 @@
 
 #### 2.1 新增子流程
 
-本节主要介绍如何新增配置组的具体操作方法。
+本节主要介绍如何新增子流程的具体操作方法。
 
-##### 1.1.1 操作步骤
+##### 2.1.1 操作步骤
 
-a）在项目管理页面中，选择“配置组管理”，系统显示配置组管理页面，如图1-1所示：
+a）在“子流程管理”页面中，选择子流程模块，单击“+”再选择“新增子流程”，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_14-01_img.png)
+![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_15-03_img.png)
 
-##### 图1-1 选择配置组管理
+##### 图2-1 选择子流程模块
+
+b）在新增子流程页面”，输入子流程名称和描述信息，单击“下一步”，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fsimage/zc-image/cz_15-04_img.png)
+
+##### 图2-2 新增子流程
+
+c）在入参列表页面，单击“新增”添加子流程的入参信息，入参名称和类型请根据实际配置，如图2-3所示：
+
+![2-3](https://www.feisuanyz.com/fsimage/zc-image/cz_15-05_img.png)
+
+##### 图2-3 新增子流程入参字段
+
+##### 说明：
