--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/14. 子流程管理/2. 子流程.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/14. 子流程管理/2. 子流程.md
@@ -53,3 +53,29 @@ e）单击“提交”，完成新增子流程配置，如图2-5所示：
 系统提供该功能，用户可以在同项目中复制、或者在不同项目之间导入导出子流程，以减少频繁添加公共的子流程。
 
 ##### 前提条件
+
+您需要拥有“子流程管理”模块的权限。
+
+权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.2.1 操作步骤：复制子流程
+
+a）进入“子流程管理”模块，选中需复制的子流程，单击旁边的三个点符号，或进入编辑子流程页面，选择“复制子流程”，如图2-6、2-7所示：
+
+![2-6](https://www.feisuanyz.com/fsimage/zc-image/cz_15_2_2_1.png)
+
+##### 图2-6 子流程列表
+
+![2-7](https://www.feisuanyz.com/fsimage/zc-image/cz_15_2_2_2.png)
+
+##### 图2-7 编辑子流程页面
+
+b）系统弹出“是否复制到当前模块”提示，您可根据需求选择当前模块或其他模块，如图2-8所示：
+
+![2-8](https://www.feisuanyz.com/fsimage/zc-image/cz_15_2_2_3.png)
+
+##### 图2-8 弹出提示框
+
+c）修改子流程的名称，单击“提交”即可，如图2-9所示：
+
+![2-9](https://www.feisuanyz.com/fsimage/zc-image/cz_15_2_2_4.png)
