--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/14. 子流程管理/2. 子流程.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/14. 子流程管理/2. 子流程.md
@@ -106,3 +106,26 @@ b）系统显示导入子流程页面，选择要导入的模块，如图2-12所
 
 c）选择需上传的子流程JSON文件，单击“导入”。
 
+##### 注意：若需导入的子流程在系统中已存在时，您需要选择“覆盖原有子流程”才可导入，原有子流程将会自动删除。
+
+d）系统提示“导入子流程成功”。
+
+##### 2.2.3 操作步骤：导出子流程
+
+a）进入“子流程管理”模块，单击“新增子流程模块”旁边的三个点按钮选择“导出子流程”，如图2-13所示：
+
+![2-13](https://www.feisuanyz.com/fsimage/zc-image/cz_15_2_2_9.png)
+
+##### 图2-13 选择导出子流程
+
+b）系统显示导出子流程页面，输入导出子流程文件的文件名（若未输入则自动生成），如图2-14所示：
+
+![2-14](https://www.feisuanyz.com/fsimage/zc-image/cz_15_2_2_8.png)
+
+##### 图2-14 导出子流程页面
+
+c）勾选需导出的子流程，同时设置是否包含模块。
+
+##### 说明：若设置包含模块，则导出的子流程JSON文件会包含模块信息，之后需导入该子流程且未选择指定导入模块时，系统会根据子流程JSON文件中的模块信息将该子流程导入到相应的模块中。
+
+d）单击“确定”，需导出的子流程JSON文件会在页面下方自动下载。
