--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -1,21 +1,13 @@
-### 2. 接口模块
+### 2. 接口
 
-#### 1.1 新增接口模块
+#### 2.1 新增接口
 
-本节主要介绍如何新增接口模型的具体操作方法。
+本节主要介绍如何在项目中新增接口的具体操作方法。
 
-##### 1.1.1 操作步骤
+##### 2.1.1 操作步骤
 
-a）在项目管理页面中，选择“接口管理”，系统接口管理页面，如图1-1所示：
+a）在项目管理页面中，选择“接口管理”，系统显示接口管理页面，如图2-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_16-01_img.png)
+![2-1](https://www.feisuanyz.com/fsimage/ks-image/ks_5-1_img.png)
 
-##### 图1-1 选择接口管理
-
-b）单击“新增接口模块”，系统显示“新增接口模块”对话框，输入接口模块的名称和描述信息，如图1-2所示：
-
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_16-02_img.png)
-
-##### 图1-2 新增接口模块
-
-c）单击“确定”，完成创建接口模块。
+##### 图2-1 选择接口管理
