--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -157,3 +157,27 @@ w）单击“提交”后的“...”，选择“发布接口”，如图2-22所
 x）单击“提交”后的“...”，选择“测试用例”，如图2-23所示：
 
 ![2-23](https://www.feisuanyz.com/fsimage/ks-image/ks_5-23_img.png)
+
+##### 图2-23 测试接口用例
+
+y）单击“编辑”，配置Body参数信息，如图2-24所示：
+
+![2-24](https://www.feisuanyz.com/fsimage/ks-image/ks_5-24_img.png)
+
+##### 图2-24 配置测试用例参数
+
+z）单击“保存”保存配置，单击“执行”执行测试用例并查看执行输出结果，如图2-25所示：
+
+![2-25](https://www.feisuanyz.com/fsimage/ks-image/ks_5-25_img.png)
+
+##### 图2-25 执行测试用例并查看输出结果
+
+#### 2.2 生成接口
+
+本节主要介绍如何通过全自动开发平台自动生成接口。
+
+##### 前提条件
+
+a）您已经成功连接数据库。
+
+b）您已经成功连接分布式中间件资源。
