--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -207,3 +207,23 @@ d）勾选全部，选择接口模块、SQL组和SQL模块，如图2-29所示：
 ![2-29](https://www.feisuanyz.com/fsimage/ks-image/ks_14-3_img.png)
 
 ##### 图2-29 选择勾选全部
+
+e）单击“生成接口”，如图2-30所示：
+
+![2-30](https://www.feisuanyz.com/fsimage/ks-image/ks_14-4_img.png)
+
+##### 图2-30 生成接口
+
+f）查看生成的接口，如图2-31所示：
+
+![2-31](https://www.feisuanyz.com/fsimage/ks-image/ks_14-5_img.png)
+
+##### 图2-31 查看生成接口
+
+#### 2.3 生成接口
+
+本节主要介绍如何对已经开发完成的接口进行测试。
+
+##### 2.3.1 操作步骤
+
+a）在项目管理页面中选择“接口管理”，系统显示“接口管理”页面，如图2-26所示：
