--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -227,3 +227,28 @@ f）查看生成的接口，如图2-31所示：
 ##### 2.3.1 操作步骤
 
 a）在项目管理页面中选择“接口管理”，系统显示“接口管理”页面，如图2-26所示：
+
+![2-26](https://www.feisuanyz.com/fsimage/ks-image/ks_9-1_img.png)
+
+##### 图2-26 选择接口管理
+
+b）在左侧选择接口模块，并展开接口模块列表，如图2-27所示：
+
+![2-27](https://www.feisuanyz.com/fsimage/ks-image/ks_9-2_img.png)
+
+##### 图2-27 展开接口模块列表
+
+c）选中接口并双击，进入接口模型页面，如图2-28所示：
+
+![2-28](https://www.feisuanyz.com/fsimage/ks-image/ks_9-3_img.png)
+
+##### 图2-28 进入接口模型页面
+
+d）选择“提交”后的“••• > 测试用例”如图9-4所示，进入测试用例页面，如图2-29所示：
+
+![2-29](https://www.feisuanyz.com/fsimage/ks-image/ks_9-4_img.png)
+
+##### 图2-29 选择测试用例
+
+e）选择“提交”后的“••• > 测试用例”如图2-29所示，进入测试用例页面，如图2-30所示：
+
