--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -277,3 +277,21 @@ g）单击“执行”，测试接口执行结果，如图2-32所示：
 系统提供该功能，您可以通过导入swagger接口文档快速创建接口，无需手动创建接口模块和接口入参。当导入成功后，直接画流程图即可，若出现特殊情况无法解析参数或接口时，则需进行手动修改。本节将为您介绍快速创建接口的具体操作步骤。
 
 ##### 2.4.1 操作步骤
+
+a）进入平台功能模块界面，选择接口管理，系统显示接口管理页面，如图2-33所示：
+
+![2-33](https://www.feisuanyz.com/fsimage/zc-image/czzn_16_2_4_1.png)
+
+##### 图2-33 选择接口管理
+
+b）单击“新增接口模块”旁的三个点按钮，选择“导入接口文档快速创建接口”，如图2-34所示：
+
+![2-34](https://www.feisuanyz.com/fsimage/zc-image/czzn_16_2_4_2.png)
+
+##### 图2-34 选择“导入接口文档快速创建接口”
+
+c）系统显示“导入接口文档快速创建接口”页面，如图2-35所示：
+
+![2-35](https://www.feisuanyz.com/fsimage/zc-image/czzn_16_2_4_3.png)
+
+##### 图2-35 导入接口文档快速创建接口页面
